# rendezvous-server

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: build-release-binaries.yml  ci.yml
examples/: discover.rs  register_once.rs
src/: lib.rs  main.rs  tracing.rs
